# Pktgen-Agent

./: .gitignore  CLAUDE.md  SKILLS.md  agent.py  agent_prompt.py  pktgen_client.py  process.md  pyproject.toml  topology.yaml  udp_flood_100.1.11.22.lua
compiler/: compile.py
dsl/: mapping.yaml  schema.yaml
dsl/skills/: arp_flood.yaml  icmp_flood.yaml  packet_sequence_generation.yaml  pcap_replay.yaml  range_based_scan.yaml  safe_stop_and_reset.yaml  stats_monitoring.yaml  tcp_flood.yaml  udp_flood.yaml
knowledge/: commands.yaml  docs_index.yaml  examples.yaml  lua_api.yaml  packet_fields.yaml  pcap.yaml  range_mode.yaml  sequence_mode.yaml  startup.yaml  verification_report.yaml
pktgen_agent/: __init__.py  agent.py  agent_prompt.py  client.py  config.py  topology.py
pktgen_agent/compiler/: __init__.py  compile.py
pktgen_agent/tools/: __init__.py  execute.py
prompts/: Pktgen Reference Prompt.md  Reference Test Harness.md  Skill DSL.md
tests/: conftest.py  test_agent.py  test_agent_prompt.py  test_compile.py  test_execute.py  test_pktgen_client.py  test_tools_init.py
tests/fixtures/: schema.yaml  topology.yaml
tests/fixtures/skills/: all_param_types.yaml  minimal_skill.yaml  required_only.yaml  with_assign.yaml  with_conditions.yaml  with_repeat.yaml  with_seqtable.yaml
tests/integration/: __init__.py  conftest.py  test_client.py  test_compile_execute.py
tools/: __init__.py  execute.py
